<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name">Thyroxine</string>

    <string name="action_settings">Settings</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="share">Share</string>

    <!-- Miscellaneous error strings -->
    <string name="error">Error</string>
    <string name="error_database">Database error</string>
    <string name="unexpected_error">Unexpected error: %1$s</string>

    <!-- Navigation drawer strings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Temporary nav strings -->
    <string name="title_fragment_bell_schedule">Bell Schedule</string>
    <string name="title_fragment_links">Links</string>

    <!-- Login strings -->
    <string name="title_activity_iodine_login">Add account</string>

    <string name="login_instructions">
        Sign in below with your TJHSST Iodine account.
    </string>
    <string name="login_disclaimer">
        This application will have access to all of your Iodine data, so if you do not
        trust the creator of this application, please don\'t sign in.
        (Basically, please don\'t sue me!)
    </string>

    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in to Thyroxine with Iodine</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out_short">Sign out</string>
    <string name="sign_out_success">
        You have been signed out successfully. However, your data is still on the device.
        To delete it, select \"Clear data\" in Settings > Apps > Thyroxine.
    </string>

    <string name="error_incorrect_username">This username is incorrect</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_tjhsst_edu_suffix">The @tjhsst.edu suffix is not necessary</string>

    <string name="error_adding_account">Error while adding account: %1$s</string>
    <string name="error_removing_account">Error while removing account: %1$s</string>
    <string name="error_not_logged_in">Not logged in</string>
    <string name="iodine_auth_error">Iodine authentication error: %1$s</string>

    <!-- Login strings for Ion -->
    <string name="login_instructions_ion">
        Sign in below with your TJHSST Ion account.
    </string>
    <string name="login_disclaimer_ion">
        This application is not officially affiliated with Ion. Your username and password
        will not be stored.
    </string>
    <string name="action_sign_in_ion">Sign into Thyroxine with Ion</string>
    <string name="ion_auth_error">Ion authentication error: %1$s</string>

    <!-- News strings -->
    <string name="news_provider_name">News</string>
    <string name="title_fragment_news">News</string>
    <string name="refresh">Refresh</string>

    <string name="title_activity_entry_detail">Post details</string>
    <string name="news_entry_title">Title</string>
    <string name="news_entry_published">Published</string>

    <plurals name="news_entry_liked">
        <item quantity="one">%1$d person like this</item>
        <item quantity="other">%1$d people like this</item>
    </plurals>

    <!-- Eighth strings -->
    <string name="eighth_provider_name">Eighth</string>
    <string name="title_fragment_eighth">Eighth</string>
    <string name="title_activity_block">Block</string>
    <string name="title_activity_day">Day</string>

    <string name="block">Block</string>
    <string name="block_title">%1$s Block</string>
    <string name="block_title_date">%1$s %2$s Block (%3$s)</string>

    <string name="actv_id_placeholder">[Activity %1$d]</string>
    <string name="actv_description_placeholder">(No description)</string>
    <string name="actvInstance_rooms_placeholder">(No rooms)</string>
    <string name="actv_toast_text">
        [%1$d] %2$s
        \nDESCRIPTION: %3$s
        \nCOMMENTS: %4$s
        \nROOMS: %5$s
        \nSPONSORS: %6$s
        \nSIGNED UP: %7$d / %8$d
    </string>

    <string name="actv_not_selected"><![CDATA[<i>Not selected</i>]]></string>
    <string name="block_status_locked">Locked</string>
    <string name="actvInstance_status_cancelled">Cancelled</string>
    <string name="actvInstance_status_full">Full</string>
    <string name="actv_status_restricted">Restricted</string>
    <string name="actv_status_sticky">Sticky</string>

    <string name="signup_changing">Signing up for \"%1$s\"</string>
    <string name="signup_changing_wait">Please wait for the current signup to complete.</string>
    <string name="signup_success">You were successfully signed up for \"%1$s\".</string>
    <string name="signup_failure">Your signup for \"%1$s\" failed because of the following reasons:</string>

    <!-- SyncAdapter related strings -->
    <string name="iodine_authenticator_name">Thyroxine (Iodine)</string>
    <string name="ion_authenticator_name">Thyroxine (Ion)</string>
    <string name="iodine_account_only_one">
        Only one Iodine account can exist at a time. To add another, remove the current one first.
        This can be done in the device settings under the Accounts section.
    </string>
    <string name="iodine_cookie_auth_token_label">TJHSST Iodine Account</string>
    <string name="ion_oauth2_auth_token_label">TJHSST Ion Account (OAuth)</string>
</resources>
